# constexpr

./: CMakeLists.txt  README.md
include/: cx_algorithm.h  cx_array.h  cx_fnv1.h  cx_guid.h  cx_math.h  cx_md5.h  cx_murmur3.h  cx_numeric.h  cx_pcg32.h  cx_sha256.h  cx_strenc.h  cx_typeid.h  cx_utils.h
include/legacy/: cx_counter.h  cx_pcg32.h
test/: CMakeLists.txt  cx_array.cpp  cx_guid.cpp  cx_numeric.cpp  cx_strenc.cpp  cx_typeid.cpp  cx_utils.cpp  main.cpp
test/legacy/: cx_counter.cpp  cx_pcg32.cpp
test/source/: cx_algorithm.cpp  cx_hash.cpp  cx_math.cpp  main.cpp
